tests/compile_fail/derive_payload_missing_binary.rs
use ktstr::Payload;

#[derive(Payload)]
#[payload(name = "no_binary")]
#[allow(dead_code)]
struct NoBinaryPayload;

fn main() {}
